--- a/conf/distro/karo-minimal.conf
+++ b/conf/distro/karo-minimal.conf
@@ -11,3 +11,6 @@ DISTRO_FEATURES_remove = "bluetooth bluez5 gobject-introspection-data pulseaudio
 DISTRO_FEATURES_BACKFILL_CONSIDERED += "bluetooth bluez5 gobject-introspection-data pulseaudio"
 
 VOLATILE_LOG_DIR = "no"
+
+# mask out .bb's from qt5 since it brings python
+BBMASK += ".*qt.*"
