--- a/conf/distro/karo-wayland.conf
+++ b/conf/distro/karo-wayland.conf
@@ -5,8 +5,8 @@ DISTRO_NAME = "karo-wayland (Ka-Ro Linux BSP with wayland backend)"
 DISTRO_VERSION = "1.0"
 DISTRO_CODENAME = "2020-03"
 
-DISTRO_FEATURES_remove = "bluetooth bluez5 gobject-introspection-data pulseaudio x11"
-DISTRO_FEATURES_BACKFILL_CONSIDERED += "bluetooth bluez5 gobject-introspection-data pulseaudio"
+DISTRO_FEATURES_remove = "bluetooth bluez5 gobject-introspection-data x11"
+DISTRO_FEATURES_BACKFILL_CONSIDERED += "bluetooth bluez5 gobject-introspection-data"
 
 # mask out .bbappends from karo-minimal distro
 BBMASK += ".*/recipes-karo-minimal/.*"
