--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -14,3 +14,6 @@ BBFILE_PRIORITY_karo-distro = "6"
 
 LAYERDEPENDS_karo-distro = "karo"
 LAYERSERIES_COMPAT_karo-distro = "zeus"
+
+# make qt 5.15 usable for zeus
+LAYERSERIES_COMPAT_qt5-layer_append = " zeus"
