--- a/conf/distro/karo-base.conf
+++ b/conf/distro/karo-base.conf
@@ -2,7 +2,7 @@ require conf/distro/include/karo-distro.inc
 
 DISTRO = "karo-base"
 
-DISTRO_NAME = "karo-base (Ka-Ro TX6 Linux BSP)"
+DISTRO_NAME = "karo-base (Ka-Ro Linux BSP)"
 DISTRO_VERSION = "1.0"
 DISTRO_CODENAME = "2018-01"
 
