meta/files: prevent creation of bogus '/var/volatile/' directoy

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -14,3 +14,4 @@ BBFILE_PRIORITY_karo-distro = "6"
 
 LAYERDEPENDS_karo-distro = "karo"
 LAYERSERIES_COMPAT_karo-distro = "zeus"
+FILESYSTEM_PERMS_TABLES = "meta/files/fs-perms.txt"
