--- a/conf/distro/karo-minimal.conf
+++ b/conf/distro/karo-minimal.conf
@@ -7,7 +7,18 @@ DISTRO_NAME = "karo-minimal (Ka-Ro Linux BSP with minimal read-only rootfs)"
 DISTRO_VERSION = "1.0"
 DISTRO_CODENAME = "2020-03"
 
-DISTRO_FEATURES_remove = "bluetooth bluez5 gobject-introspection-data pulseaudio wayland"
-DISTRO_FEATURES_BACKFILL_CONSIDERED += "bluetooth bluez5 gobject-introspection-data pulseaudio"
+DISTRO_FEATURES_remove = " \
+		          bluetooth \
+			  bluez5 \
+			  gobject-introspection-data \
+			  multiarch \
+			  pulseaudio \
+"
+DISTRO_FEATURES_BACKFILL_CONSIDERED += " \
+				        bluetooth \
+					bluez5 \
+					gobject-introspection-data \
+					pulseaudio \
+"
 
 VOLATILE_LOG_DIR = "no"
