--- a/conf/distro/karo-base.conf
+++ b/conf/distro/karo-base.conf
@@ -6,8 +6,11 @@ DISTRO_NAME = "karo-base (Ka-Ro Linux BSP)"
 DISTRO_VERSION = "1.0"
 DISTRO_CODENAME = "2020-11"
 
-DISTRO_FEATURES_remove = "gobject-introspection-data pulseaudio"
-DISTRO_FEATURES_BACKFILL_CONSIDERED += "gobject-introspection-data pulseaudio"
-
-VIRTUAL-RUNTIME_dev_manager ?= "udev"
-VIRTUAL-RUNTIME_init_manager ?= "sysvinit"
+DISTRO_FEATURES_remove = " \
+                          gobject-introspection-data \
+                          pulseaudio \
+"
+DISTRO_FEATURES_BACKFILL_CONSIDERED += " \
+                                        gobject-introspection-data \
+                                        pulseaudio \
+"
