--- a/conf/distro/karo-minimal.conf
+++ b/conf/distro/karo-minimal.conf
@@ -1,10 +1,8 @@
 require conf/distro/include/karo-distro.inc
 
 DISTRO = "karo-minimal"
-
 DISTRO_NAME = "karo-minimal (Ka-Ro Linux BSP with minimal read-only rootfs)"
-DISTRO_VERSION = "1.0"
-DISTRO_CODENAME = "2020-11"
+DISTRO_VERSION = "5.10-${DISTRO_CODENAME}"
 
 DISTRO_FEATURES_remove = " \
 		          bluetooth \
