--- a/conf/distro/karo-xwayland.conf
+++ b/conf/distro/karo-xwayland.conf
@@ -2,8 +2,7 @@ require conf/distro/include/karo-distro.inc
 
 DISTRO = "karo-xwayland"
 DISTRO_NAME = "karo-xwayland (Ka-Ro Linux BSP with xwayland backend)"
-DISTRO_VERSION = "1.0"
-DISTRO_CODENAME = "2021-03"
+DISTRO_VERSION = "5.10-${DISTRO_CODENAME}"
 
 DISTRO_FEATURES_remove = "bluetooth bluez5 gobject-introspection-data"
 DISTRO_FEATURES_BACKFILL_CONSIDERED += "bluetooth bluez5 gobject-introspection-data"
