Fit distro layer to hardknott bsp

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -13,6 +13,7 @@ BBFILE_PATTERN_karo-distro := "^${LAYERDIR}/"
 BBFILE_PRIORITY_karo-distro = "6"
 
 LAYERDEPENDS_karo-distro = "karo"
-LAYERSERIES_COMPAT_karo-distro = "gatesgarth"
+LAYERDEPENDS_karo-distro_mx8 = "karo-nxp"
+LAYERSERIES_COMPAT_karo-distro = "hardknott"
 
 FILESYSTEM_PERMS_TABLES = "meta/files/fs-perms.txt"
