karo-minimal: remove imx-m4-demos and camera support

--- a/conf/distro/karo-minimal.conf
+++ b/conf/distro/karo-minimal.conf
@@ -17,3 +17,10 @@ DISTRO_FEATURES_BACKFILL_CONSIDERED += " \
 					gobject-introspection-data \
 					pulseaudio \
 "
+
+# kernelfeatures not needed in minimal
+DISTRO_FEATURES_remove = " \
+                          csi-camera \
+                          imx219 \
+"
+MACHINE_EXTRA_RRECOMMENDS_remove = "imx-m4-demos"
