--- a/recipes-core/uuu-script-template/uuu-templates/mx8mm/uuu.auto.template
+++ b/recipes-core/uuu-script-template/uuu-templates/mx8mm/uuu.auto.template
@@ -1,4 +1,4 @@
-uuu_version 1.0.1
+uuu_version 1.2.91
 
 #
 # Author: Markus Bauer <mb@karo-electronics.de>
@@ -7,7 +7,7 @@ uuu_version 1.0.1
 #
 # This file flashes $image to $machine
 
-### boot uboot with fastboot support
+### boot U-Boot with fastboot support
 SDP: boot -f imx-boot-$machine.bin-mfg-$imxboot_target
 SDPV: write -f imx-boot-$machine.bin-mfg-$imxboot_target -offset 0x57c00
 SDPV: jump
@@ -16,11 +16,11 @@ SDPV: jump
 FB: flash bootloader imx-boot-$machine.bin-default-$imxboot_target
 FB: ucmd mmc partconf $${emmc_dev} 1 1 0
 
-### GPT partition layout 
+### GPT partition layout
 #
 # 32M /boot
 # MAX /
-FB: ucmd setenv partitions 'uuid_disk=$${uuid_gpt_disk};name=boot,size=32M,start=1MiB,uuid=$${uuid_boot};name=rootfs,size=MAX;'
+FB: ucmd setenv partitions 'uuid_disk=$${uuid_gpt_disk};name=boot,size=32MiB,start=1MiB,uuid=$${uuid_boot};name=rootfs,size=MAX;'
 FB: ucmd gpt write mmc 0 $${partitions}
 
 ### force re-read partition table
@@ -31,7 +31,7 @@ FB: ucmd setenv fastboot_dev mmc
 FB: flash boot karo-image-bootfs-$machine.ext4
 FB: flash -raw2sparse rootfs $image-$machine.ext4
 
-### Set to u-boot default environment
+### Set default u-boot environment
 FB: ucmd env default -a
 FB: ucmd setenv bootdelay 1
 FB: ucmd saveenv
