--- a/recipes-core/uuu-script-template/uuu-templates/mx8mn/uuu.auto.template
+++ b/recipes-core/uuu-script-template/uuu-templates/mx8mn/uuu.auto.template
@@ -1,4 +1,4 @@
-uuu_version 1.0.1
+uuu_version 1.2.91
 
 #
 # Author: Markus Bauer <mb@karo-electronics.de>
@@ -7,7 +7,7 @@ uuu_version 1.0.1
 #
 # This file flashes $image to $machine
 
-### Boot our uboot with fastboot support
+### boot U-Boot with fastboot support
 SDPS: boot -f imx-boot-$machine.bin-mfg-$imxboot_target
 SDPV: write -f imx-boot-$machine.bin-mfg-$imxboot_target -offset 0x57c00
 SDPV: jump
@@ -20,7 +20,7 @@ FB: ucmd mmc partconf $${emmc_dev} 1 1 0
 #
 # 32M /boot
 # MAX /
-FB: ucmd setenv partitions 'uuid_disk=$${uuid_gpt_disk};name=boot,size=32M,start=1MiB,uuid=$${uuid_boot};name=rootfs,size=MAX;'
+FB: ucmd setenv partitions 'uuid_disk=$${uuid_gpt_disk};name=boot,size=32MiB,start=1MiB,uuid=$${uuid_boot};name=rootfs,size=MAX;'
 FB: ucmd gpt write mmc 0 $${partitions}
 
 ### force re-read partition table
