--- a/recipes-core/uuu-script-template/uuu-templates/mx8mp/uuu.auto.template
+++ b/recipes-core/uuu-script-template/uuu-templates/mx8mp/uuu.auto.template
@@ -1,4 +1,4 @@
-uuu_version 1.2.0
+uuu_version 1.2.91
 
 #
 # Author: Markus Bauer <mb@karo-electronics.de>
@@ -7,7 +7,7 @@ uuu_version 1.2.0
 #
 # This file flashes $image to $machine
 
-### boot uboot with fastboot support
+### boot U-Boot with fastboot support
 SDPS: boot -f imx-boot-$machine.bin-mfg-$imxboot_target
 
 ### Writing default u-boot to emmc
@@ -16,9 +16,9 @@ FB: ucmd mmc partconf $${emmc_dev} 1 1 0
 
 ### GPT partition layout
 #
-# 32M /boot
+# 64MiB /boot
 # MAX /
-FB: ucmd setenv partitions 'uuid_disk=$${uuid_gpt_disk};name=boot,size=64M,start=1MiB,uuid=$${uuid_boot};name=rootfs,size=MAX;'
+FB: ucmd setenv partitions 'uuid_disk=$${uuid_gpt_disk};name=boot,size=64MiB,start=1MiB,uuid=$${uuid_boot};name=rootfs,size=MAX;'
 FB: ucmd gpt write mmc 0 $${partitions}
 
 ### force re-read partition table
@@ -29,7 +29,7 @@ FB: ucmd setenv fastboot_dev mmc
 FB: flash boot karo-image-bootfs-$machine.ext4
 FB: flash -raw2sparse rootfs $image-$machine.ext4
 
-### Default u-boot environment
+### Set default u-boot environment
 FB: ucmd env default -a
 FB: ucmd setenv bootdelay 1
 FB: ucmd saveenv
