add conditional distro features to DISTRO_FEATURES_DEFAULT to make it easier to re-add removed features

--- a/conf/distro/karo-minimal.conf
+++ b/conf/distro/karo-minimal.conf
@@ -5,22 +5,18 @@ DISTRO_NAME = "karo-minimal (Ka-Ro Linux BSP with minimal read-only rootfs)"
 DISTRO_VERSION = "5.10-${DISTRO_CODENAME}"
 
 DISTRO_FEATURES_remove = " \
-		          bluetooth \
-			  bluez5 \
-			  gobject-introspection-data \
-			  multiarch \
-			  pulseaudio \
+                          gobject-introspection-data \
+                          multiarch \
+                          pulseaudio \
 "
 DISTRO_FEATURES_BACKFILL_CONSIDERED += " \
-				        bluetooth \
-					bluez5 \
-					gobject-introspection-data \
-					pulseaudio \
+                                        gobject-introspection-data \
+                                        pulseaudio \
 "
 
 # kernelfeatures not needed in minimal
-DISTRO_FEATURES_remove = " \
-                          csi-camera \
-                          imx219 \
+DISTRO_FEATURES_DEFAULT_remove = " \
+                                  csi-camera \
+                                  imx219 \
 "
 MACHINE_EXTRA_RRECOMMENDS_remove = "imx-m4-demos"
