--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -2,18 +2,23 @@
 BBPATH .= ":${LAYERDIR}"
 
 # We have a packages directory, add to BBFILES
-BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
-            ${LAYERDIR}/recipes-*/*/*.bbappend \
-            ${LAYERDIR}/recipes-*/*/*/*.bb \
-            ${LAYERDIR}/recipes-*/*/*/*.bbappend \
+BBFILES += "\
+        ${LAYERDIR}/recipes-*/*/*.bb \
+        ${LAYERDIR}/recipes-*/*/*.bbappend \
+        ${LAYERDIR}/recipes-*/*/*/*.bb \
+        ${LAYERDIR}/recipes-*/*/*/*.bbappend \
+"
+BBMASK_append_use-mainline-bsp = "\
+        .*/recipes-karo-nxp/.* \
 "
 
 BBFILE_COLLECTIONS += "karo-distro"
 BBFILE_PATTERN_karo-distro := "^${LAYERDIR}/"
 BBFILE_PRIORITY_karo-distro = "6"
+BBFILE_PRIORITY_karo-distro_use-nxp-bsp = "11"
 
-LAYERDEPENDS_karo-distro = "karo"
-LAYERDEPENDS_karo-distro_mx8 = "karo-nxp"
+LAYERDEPENDS_karo-distro_use-mainline-bsp = "karo"
+LAYERDEPENDS_karo-distro_use-nxp-bsp = "karo-nxp"
 LAYERSERIES_COMPAT_karo-distro = "hardknott"
 
 FILESYSTEM_PERMS_TABLES = "meta/files/fs-perms.txt"
