Kirkstone layer version. Update all syntaxes.

--- a/conf/distro/karo-minimal.conf
+++ b/conf/distro/karo-minimal.conf
@@ -4,19 +4,21 @@ DISTRO = "karo-minimal"
 DISTRO_NAME = "karo-minimal (Ka-Ro Linux BSP with minimal read-only rootfs)"
 DISTRO_VERSION = "5.10-${DISTRO_CODENAME}"
 
-DISTRO_FEATURES_remove = " \
+DISTRO_FEATURES:remove = " \
                           gobject-introspection-data \
                           multiarch \
                           pulseaudio \
 "
+
 DISTRO_FEATURES_BACKFILL_CONSIDERED += " \
                                         gobject-introspection-data \
                                         pulseaudio \
 "
 
 # kernelfeatures not needed in minimal
-DISTRO_FEATURES_DEFAULT_remove = " \
+DISTRO_FEATURES_DEFAULT:remove = " \
                                   csi-camera \
                                   imx219 \
 "
-MACHINE_EXTRA_RRECOMMENDS_remove = "imx-m4-demos"
+
+MACHINE_EXTRA_RRECOMMENDS:remove = "imx-m4-demos"
