--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -8,17 +8,17 @@ BBFILES += "\
         ${LAYERDIR}/recipes-*/*/*/*.bb \
         ${LAYERDIR}/recipes-*/*/*/*.bbappend \
 "
-BBMASK_append_use-mainline-bsp = "\
+BBMASK:append:use-mainline-bsp = "\
         .*/recipes-karo-nxp/.* \
 "
 
 BBFILE_COLLECTIONS += "karo-distro"
 BBFILE_PATTERN_karo-distro := "^${LAYERDIR}/"
 BBFILE_PRIORITY_karo-distro = "6"
-BBFILE_PRIORITY_karo-distro_use-nxp-bsp = "11"
+BBFILE_PRIORITY_karo-distro:use-nxp-bsp = "11"
 
-LAYERDEPENDS_karo-distro_use-mainline-bsp = "karo"
-LAYERDEPENDS_karo-distro_use-nxp-bsp = "karo-nxp"
-LAYERSERIES_COMPAT_karo-distro = "hardknott"
+LAYERDEPENDS_karo-distro:use-mainline-bsp = "karo"
+LAYERDEPENDS_karo-distro:use-nxp-bsp = "karo-nxp"
+LAYERSERIES_COMPAT_karo-distro = "kirkstone"
 
 FILESYSTEM_PERMS_TABLES = "meta/files/fs-perms.txt"
