--- a/conf/distro/karo-xwayland.conf
+++ b/conf/distro/karo-xwayland.conf
@@ -8,7 +8,7 @@ DISTRO_VERSION = "5.10-${DISTRO_CODENAME}"
 BBMASK += ".*/recipes-karo-minimal/.*"
 
 # add support for xwayland
-DISTRO_FEATURES_append = " \
+DISTRO_FEATURES:append = " \
                           opengl \
                           vulkan \
                           wayland \
