--- a/conf/distro/karo-wayland.conf
+++ b/conf/distro/karo-wayland.conf
@@ -4,7 +4,7 @@ DISTRO = "karo-wayland"
 DISTRO_NAME = "karo-wayland (Ka-Ro Linux BSP with wayland backend)"
 
 # mask out .bbappends from karo-minimal distro
-BBMASK += ".*/recipes-karo-minimal/.*"
+BBMASK:append = " .*/recipes-karo-minimal/.*"
 
 # add support for wayland
 DISTRO_FEATURES:append = " \
