--- a/conf/distro/karo-x11.conf
+++ b/conf/distro/karo-x11.conf
@@ -4,7 +4,7 @@ DISTRO = "karo-x11"
 DISTRO_NAME = "karo-x11 (Ka-Ro Linux BSP with X11 support)"
 
 # mask out .bbappends from karo-minimal distro
-BBMASK += ".*/recipes-karo-minimal/.*"
+BBMASK:append = " .*/recipes-karo-minimal/.*"
 
 # add support for X11
 DISTRO_FEATURES:append = " \
