--- a/conf/distro/karo-xwayland.conf
+++ b/conf/distro/karo-xwayland.conf
@@ -4,7 +4,7 @@ DISTRO = "karo-xwayland"
 DISTRO_NAME = "karo-xwayland (Ka-Ro Linux BSP with xwayland backend)"
 
 # mask out .bbappends from karo-minimal distro
-BBMASK += ".*/recipes-karo-minimal/.*"
+BBMASK:append = " .*/recipes-karo-minimal/.*"
 
 # add support for xwayland
 DISTRO_FEATURES:append = " \
