weston: add commented 'autolaunch' section to weston.ini for convenience

--- a/recipes-graphics/wayland/weston-init/weston.ini
+++ b/recipes-graphics/wayland/weston-init/weston.ini
@@ -74,3 +74,6 @@ command=/usr/bin/weston --backend=rdp-backend.so --shell=fullscreen-shell.so --n
 
 #[xwayland]
 #path=/usr/bin/Xwayland
+
+#[autolaunch]
+#path=/usr/bin/weston-terminal
