Initial langdale support

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -19,6 +19,11 @@ BBFILE_PRIORITY_karo-distro:use-nxp-bsp = "11"
 
 LAYERDEPENDS_karo-distro:use-mainline-bsp = "karo"
 LAYERDEPENDS_karo-distro:use-nxp-bsp = "karo-nxp"
-LAYERSERIES_COMPAT_karo-distro = "kirkstone"
+LAYERSERIES_COMPAT_karo-distro = "langdale"
 
 FILESYSTEM_PERMS_TABLES = "meta/files/fs-perms.txt"
+
+BBFILES_DYNAMIC += "\
+        meta-ml:${LAYERDIR}/dynamic-layers/meta-ml/*/*/*.bbappend \
+        meta-freescale:${LAYERDIR}/dynamic-layers/recipes-graphics/*/*.bbappend \
+"
