move layer up to mickledore revision

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -19,7 +19,7 @@ BBFILE_PRIORITY_karo-distro:use-nxp-bsp = "11"
 
 LAYERDEPENDS_karo-distro:use-mainline-bsp = "karo"
 LAYERDEPENDS_karo-distro:use-nxp-bsp = "karo-nxp"
-LAYERSERIES_COMPAT_karo-distro = "langdale"
+LAYERSERIES_COMPAT_karo-distro = "mickledore"
 
 FILESYSTEM_PERMS_TABLES = "meta/files/fs-perms.txt"
 
