rz-install-script: make sure the script can be called from outside the deploy directory

--- a/recipes-karo-rz/recipes-core/rz-install-script/templates/rzg2/install-bootloader.template
+++ b/recipes-karo-rz/recipes-core/rz-install-script/templates/rzg2/install-bootloader.template
@@ -16,6 +16,8 @@ if [ $$# = 0 ];then
     exit 1
 fi
 
+cd "$$(cd "`dirname "$$0"`";pwd -P)"
+
 boot_file() {
     local fsize=`stat -c %s "$$1"`
     printf "%u KiB\n" $$(($$fsize / 1024))
