--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -24,6 +24,7 @@ LAYERSERIES_COMPAT_karo-distro = "mickledore"
 FILESYSTEM_PERMS_TABLES = "meta/files/fs-perms.txt"
 
 BBFILES_DYNAMIC += "\
-        meta-ml:${LAYERDIR}/dynamic-layers/meta-ml/*/*/*.bbappend \
+        imx-machine-learning:${LAYERDIR}/dynamic-layers/meta-ml/recipes-nnstreamer/*.bbappend \
+        imx-machine-learning:${LAYERDIR}/dynamic-layers/meta-ml/recipes-nnstreamer/nnshark/*.bbappend \
         qt6-layer:${LAYERDIR}/dynamic-layers/recipes-qt/*/*.bbappend \
 "
