added dynamic rauc layer to layer.conf

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -27,4 +27,6 @@ BBFILES_DYNAMIC += "\
         imx-machine-learning:${LAYERDIR}/dynamic-layers/meta-ml/recipes-nnstreamer/*.bbappend \
         imx-machine-learning:${LAYERDIR}/dynamic-layers/meta-ml/recipes-nnstreamer/nnshark/*.bbappend \
         qt6-layer:${LAYERDIR}/dynamic-layers/recipes-qt/*/*.bbappend \
+        rauc:${LAYERDIR}/dynamic-layers/recipes-core/*/*.bbappend \
+        rauc:${LAYERDIR}/dynamic-layers/recipes-core/*/*.bb \
 "
