--- a/recipes-core/images/uuu-script-templates/mx8mn-nxp-bsp/uuu.auto.template
+++ b/recipes-core/images/uuu-script-templates/mx8mn-nxp-bsp/uuu.auto.template
@@ -18,7 +18,7 @@ FB: flash mmc0boot0 $image_bootloader-$machine-default.bin
 # enable boot from eMMC and switch to boot partition
 FB: ucmd mmc partconf $${emmc_dev} $${emmc_boot_ack} $${emmc_boot_part} $${emmc_boot_part}
 
-# erase environment in eMMC
+# erase environment in eMMC boot partition
 FB: ucmd mmc erase c00 400
 
 # switch to eMMC user partition
