--- a/recipes-core/images/uuu-script-templates/mx8mp-nxp-bsp/uuu.auto.template
+++ b/recipes-core/images/uuu-script-templates/mx8mp-nxp-bsp/uuu.auto.template
@@ -8,9 +8,7 @@ uuu_version 1.4.77
 # This file flashes $image to $machine
 
 ### boot U-Boot with fastboot support
-SDP: boot -f $image_bootloader-$machine-mfg.bin
-SDPV: write -f $image_bootloader-$machine-mfg.bin -skipspl
-SDPV: jump
+SDPS: boot -f $image_bootloader-$machine-mfg.bin
 
 ### Writing default u-boot to emmc
 FB: flash mmc0boot0 $image_bootloader-$machine-default.bin
@@ -18,7 +16,7 @@ FB: flash mmc0boot0 $image_bootloader-$machine-default.bin
 # enable boot from eMMC and switch to boot partition
 FB: ucmd mmc partconf $${emmc_dev} $${emmc_boot_ack} $${emmc_boot_part} $${emmc_boot_part}
 
-# erase environment in eMMC
+# erase environment in eMMC boot partition
 FB: ucmd mmc erase c00 400
 
 # switch to eMMC user partition
