--- a/recipes-core/images/uuu-script-templates/rzg2/uuu.auto.template
+++ b/recipes-core/images/uuu-script-templates/rzg2/uuu.auto.template
@@ -12,25 +12,27 @@ uuu_version 1.4.77
 
 ### Re-program bootloader
 FB: oem ucmd:setenv fastboot_buffer 0x58000000
-FB: oem ucmd:setenv erase_bootloader 'mmc erase 0 800;mmc erase 1000 1000'
+FB: oem ucmd:setenv erase_bootloader 'mmc erase 0 c00;mmc erase 1000 1000'
 FB: oem ucmd:setenv erase_env mmc erase c00 400
 FB: oem ucmd:setenv prog_bl2 'setexpr fs $${filesize} + 1ff; setexpr fs $${fs} / 200; mmc write $${fastboot_buffer} 1 $${fs}'
 FB: oem ucmd:setenv prog_fip 'setexpr fs $${filesize} + 1ff; setexpr fs $${fs} / 200; mmc write $${fastboot_buffer} 100 $${fs}'
+
+# enable boot from eMMC and switch to eMMC boot partition
 FB: oem ucmd:mmc partconf 0 $${emmc_boot_ack} $${emmc_boot_part} $${emmc_boot_part}
+
 FB: download -f bl2_bp-$machine.bin
 FB: oem ucmd:run erase_bootloader
 FB: oem ucmd:run erase_env
 FB: oem ucmd:run prog_bl2
+
 FB: download -f fip-$machine.bin
 FB: oem ucmd:run prog_fip
+
+# switch to eMMC user partition
 FB: oem ucmd:mmc partconf 0 $${emmc_boot_ack} $${emmc_boot_part} 0
 
 ### GPT partition layout
 FB: oem ucmd:gpt write mmc 0 '$partitions'
-
-### force re-read partition table
-FB: oem ucmd:setenv fastboot_dev sata
-FB: oem ucmd:setenv fastboot_dev mmc
 
 ### Flashing partitions
 $flash_cmds
