--- a/recipes-core/images/uuu-script-templates/stm32mp1/uuu.auto.template
+++ b/recipes-core/images/uuu-script-templates/stm32mp1/uuu.auto.template
@@ -13,24 +13,19 @@ uuu_version 1.4.77
 ### Setup VID PID
 CFG: FB: -vid 0x0483 -pid 0x0afb
 
-### Program Trusted Firmware image
-FB: oem ucmd:setenv fastboot_buffer 0xc0000000
-FB: oem ucmd:setenv erase_atf 'mmc erase 0 800;mmc erase 1000 1000'
-FB: oem ucmd:setenv erase_env mmc erase c00 400
-FB: oem ucmd:setenv prog_atf 'setexpr fs $${filesize} + 1ff; setexpr fs $${fs} / 200; mmc write $${fastboot_buffer} 0 $${fs}'
+# enable boot from eMMC and switch to eMMC boot partition
 FB: oem ucmd:mmc partconf 0 $${emmc_boot_ack} $${emmc_boot_part} $${emmc_boot_part}
-FB: download -f tf-a-$soc_family-$machine-$bootscheme.stm32
-FB: oem ucmd:run erase_atf
-FB: oem ucmd:run erase_env
-FB: oem ucmd:run prog_atf
+
+# erase atf in eMMC boot partition
+FB: oem ucmd: mmc erase 0 c00;mmc erase 1000 1000
+# erase environment in eMMC boot partition
+FB: oem ucmd:mmc erase c00 400
+
+# switch to eMMC user partition
 FB: oem ucmd:mmc partconf 0 $${emmc_boot_ack} $${emmc_boot_part} 0
 
 ### GPT partition layout
 FB: oem ucmd:gpt write mmc 0 '$partitions'
-
-### force re-read partition table
-FB: oem ucmd:setenv fastboot_dev sata
-FB: oem ucmd:setenv fastboot_dev mmc
 
 ### Flashing partitions
 $flash_cmds
