--- a/recipes-core/images/uuu-script-templates/stm32mp15/start-fastboot.template
+++ b/recipes-core/images/uuu-script-templates/stm32mp15/start-fastboot.template
@@ -10,7 +10,7 @@ wait_for_usbdev() {
 	sleep 1
 	lsusb | grep -q "$$usbdev" && break
 	if $$first;then
-	    echo Waiting for USB dev
+	    echo Waiting for USB device $$usbdev
 	    first=false
 	fi
     done
