add support for stm32mp2 based images

--- a/conf/distro/karo-minimal.conf
+++ b/conf/distro/karo-minimal.conf
@@ -4,20 +4,21 @@ DISTRO = "karo-minimal"
 DISTRO_NAME = "karo-minimal (Ka-Ro Linux BSP with minimal read-only rootfs)"
 
 DISTRO_FEATURES:remove = " \
-                          gobject-introspection-data \
-                          multiarch \
-                          pulseaudio \
+    gobject-introspection-data \
+    multiarch \
+    pulseaudio \
 "
 
 DISTRO_FEATURES_BACKFILL_CONSIDERED += " \
-                                        gobject-introspection-data \
-                                        pulseaudio \
+    gobject-introspection-data \
+    pulseaudio \
 "
 
 # kernelfeatures not needed in minimal
 DISTRO_FEATURES_DEFAULT:remove = " \
-                                  csi-camera \
-                                  imx219 \
+    csi-camera \
+    imx219 \
+    vivante_gpu \
 "
 
 MACHINE_EXTRA_RRECOMMENDS:remove = "imx-m4-demos"
