--- a/conf/distro/karo-wayland.conf
+++ b/conf/distro/karo-wayland.conf
@@ -1,4 +1,4 @@
-require conf/distro/include/karo-distro.inc
+require include/karo-distro.inc
 
 DISTRO = "karo-wayland"
 DISTRO_NAME = "karo-wayland (Ka-Ro Linux BSP with wayland backend)"
@@ -8,7 +8,9 @@ BBMASK:append = " .*/recipes-karo-minimal/.*"
 
 # add support for wayland
 DISTRO_FEATURES:append = " \
-                          opengl \
-                          vulkan \
-                          wayland \
+    opengl \
+    vulkan \
+    wayland \
 "
+
+DISTRO_FEATURES_DEFAULT:append = " vivante_gpu"
