--- a/conf/distro/karo-x11.conf
+++ b/conf/distro/karo-x11.conf
@@ -1,4 +1,4 @@
-require conf/distro/include/karo-distro.inc
+require include/karo-distro.inc
 
 DISTRO = "karo-x11"
 DISTRO_NAME = "karo-x11 (Ka-Ro Linux BSP with X11 support)"
