--- a/conf/distro/karo-xwayland.conf
+++ b/conf/distro/karo-xwayland.conf
@@ -1,4 +1,4 @@
-require conf/distro/include/karo-distro.inc
+require include/karo-distro.inc
 
 DISTRO = "karo-xwayland"
 DISTRO_NAME = "karo-xwayland (Ka-Ro Linux BSP with xwayland backend)"
